# maintenance

./: .env  .gitignore  Dockerfile  README.md  app.py  create_user.py  extensions.py  maintenance.db  models.py  pyproject.toml  requirements.txt
migrations/versions/: 6c7318970eae_add_appointment_model.py  7cdda8dc9e36_adicionar_campo_requires_tracking_no_.py  7dc0cf1dda79_.py  a909d533700d_criação_inicial_do_banco_com_.py  b0f52d55ec40_criação_inicial_das_tabelas.py  b600ac14b51d_add_schedulinglink_model.py  e9f358d9a9bb_make_client_id_on_appointment_optional.py  f8429e158da1_add_category_to_stock_items.py
routes/: auth.py  clients.py  core.py  equipment.py  expenses.py  leads.py  notifications.py  qrcode.py  reports.py  schedule.py  stock.py  tasks.py  time_clock.py  users.py  utils.py
templates/: _pagination.html  admin_tasks.html  archived_clients.html  archived_list.html  base.html  client_form.html  client_list.html  dashboard.html  equipment_form.html  equipment_history.html  equipment_list.html  expense_report.html  expenses.html  financial_report.html  full_history.html  landing_page.html  lead_form.html  leads.html  login.html  maintenance_form.html  manual_stock_adjust.html  politica-de-privacidade.html  public_schedule.html  public_summary.html  qrcode_display.html  register.html  schedule.html  settings.html  stock_form.html  stock_list.html  stock_movement_report.html  task_form.html  technician_tasks.html  time_clock.html  time_clock_report.html  user_form.html  user_list.html  whatsapp_notifications.html
