[project]
name = "maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "qrcode[pil]>=8.2",
    "uvicorn[standard]>=0.35.0",
    "werkzeug>=3.1.3",
]
